# telegram_bot_for_complaints

./: .env  Dockerfile  README.md  create_bot.py  pyproject.toml  telegram_bot.py
core/: buttons.py  messages.py  utils.py
handlers/: admin.py  applications.py  communicate.py  complaint.py  complaints.py  information.py  registration.py  start.py  user.py
keyboards/: admin.py  applications.py  communicate.py  complaint.py  complaints.py  registration.py  start.py  user.py
models/: datebase.py  datebase.sqlite  user.py
